--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.html
@@ -6,7 +6,10 @@
       <li class="list-inline-item"><button class="btn-primary" 
         [routerLink]="['/members', user.id]"><i class="fa fa-user"></i></button></li>
       <li class="list-inline-item"><button class="btn-primary" (click)="sendLike(user.id)"><i class="fa fa-heart"></i></button></li>
-      <li class="list-inline-item"><button class="btn-primary"><i class="fa fa-envelope"></i></button></li>
+      <li class="list-inline-item"><button class="btn-primary"
+        [routerLink]="['/members', user.id]"
+        [queryParams]="{tab: 3}">
+        <i class="fa fa-envelope"></i></button></li>
     </ul>
   </div>
   <!--p1 - allaround padding 1px-->
